--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,24 @@
 :root {
 
     
---dark-dlue: hsl(209, 23%, 22%);
---dery-dark-blue: hsl(207, 26%, 17%);
+--dark-blue: hsl(209, 23%, 22%);
+--very-dark-blue-bg: hsl(207, 26%, 17%);
 --very-dark-blue: hsl(200, 15%, 8%);
 --dark-gray: hsl(0, 0%, 52%);
 --very-light-gray: hsl(0, 0%, 98%);
 --white: hsl(0, 0%, 100%);
 
+}
+
+* {
+
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+
+    background: var(--very-light-gray);
+ 
 }
