--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: boldFont;
-  src: url("../../../public/assets/Fonts/NunitoSans_10pt-ExtraBold.ttf");
-}
+
 
 .header {
   display: flex;
@@ -13,7 +10,13 @@
 }
 
 .head {
-  font-family: boldFont;
+  font-family: extraBoldFont;
+
  
- 
+}
+
+.dark {
+
+  background: var(--dark-blue);
+  color: white;
 }
