--- a/src/components/Main/Countries/Countries.module.css
+++ b/src/components/Main/Countries/Countries.module.css
@@ -1,10 +1,70 @@
-
 .main {
+  display: grid;
+  justify-content: flex-start;
+  align-content: center;
+  grid-template-columns: auto auto auto auto;
+  margin: 0 4rem;
+}
 
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    grid-template-columns: auto auto auto auto;
-    margin: 0 4rem;
-   
+.loader {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgba(29, 14, 14, 0.9);
+  animation: smokeOut 1s ease-in-out infinite alternate;
+  text-shadow: 0 0 1px white;
+  margin-top: 5rem;
+}
+
+.loader:before {
+  content: 'Loading....';
+}
+
+.top-arrow-box {
+  z-index: 2;
+  position: fixed;
+  bottom: 1.5rem;
+  right: 0.5rem;
+  background: var(--very-dark-blue-bg);
+  border-radius: 50%;
+  padding: 0.7rem;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.show-top-arrow-box {
+  display: flex;
+}
+
+.top-arrow-box:hover {
+  box-shadow: inset 2px 2px 2px 2px black;
+}
+
+.top-arrow {
+  fill: white;
+}
+
+.dark {
+  color: var(--white);
+}
+
+.dark-arrow-box {
+  background: var(--very-light-gray);
+}
+
+.dark-arrow {
+  fill: var(--dark-blue);
+}
+
+@keyframes smokeOut {
+  100% {
+    opacity: 0.08;
+    filter: blur(2px);
+    letter-spacing: 4px;
+  }
 }
