--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,3 +20,29 @@
   background: var(--dark-blue);
   color: white;
 }
+
+
+/* Media Queries */
+
+@media screen and (max-width: 1299px) and (min-width: 700px) {
+.header {
+  padding: 1.5rem 3rem;
+}
+
+}
+
+@media screen and (max-width: 999px) {
+
+.head {
+
+  font-size: 1.3rem;
+}
+  
+}
+
+@media screen and (max-width: 799px) {
+  .header {
+    padding: 1.5rem 2.5rem;
+  }
+  
+  }
