--- a/src/components/Header/ToogleMode.module.css
+++ b/src/components/Header/ToogleMode.module.css
@@ -35,3 +35,20 @@
   font-family: boldFont;
 }
 
+/* Media Queries */
+
+
+@media screen and (max-width: 899px) {
+ 
+  .mode {
+
+    font-size: 0.9rem;
+  }
+
+  
+.icon {
+
+  width: 1.1rem;
+  height: 1.1rem;
+}
+}  
