--- a/src/components/Main/Countries/Countries.module.css
+++ b/src/components/Main/Countries/Countries.module.css
@@ -1,9 +1,15 @@
 .main {
   display: grid;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: center;
   grid-template-columns: auto auto auto auto;
   margin: 0 4rem;
+  
+}
+
+.main-select {
+
+  justify-content: flex-start;
 }
 
 .loader {
@@ -68,3 +74,18 @@
     letter-spacing: 4px;
   }
 }
+
+
+
+/* Media Queries */
+
+@media screen and (max-width: 999px) {
+ 
+  .main {
+    grid-template-columns: auto auto auto;
+ 
+
+  }
+    
+  }
+  
