--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -46,3 +46,33 @@
   }
   
   }
+
+  
+@media screen and (max-width: 599px) {
+  .head {
+
+    font-size: 1.2rem;
+  }
+    
+  
+  }
+
+  @media screen and (max-width: 399px) {
+    .head {
+  
+      font-size: 0.9rem;
+    }
+      
+    .header {
+      padding: 1.5rem 1rem;
+    }
+    
+    }
+
+      @media screen and (max-width: 299px) {
+       .header {
+        flex-direction: column;
+        align-items: flex-start;
+        
+       }
+      }
