--- a/src/components/Header/ToogleMode.module.css
+++ b/src/components/Header/ToogleMode.module.css
@@ -52,3 +52,42 @@
   height: 1.1rem;
 }
 }  
+
+
+@media screen and (max-width: 599px) {
+ 
+  .mode {
+
+    font-size: 0.85rem;
+  }
+
+  
+.icon {
+
+  width: 1rem;
+  height: 1rem;
+}
+}  
+
+@media screen and (max-width: 399px) {
+ 
+  .mode {
+
+    font-size: 0.8rem;
+  }
+
+  
+.icon {
+
+  width: 0.9rem;
+  height: 0.9rem;
+}
+}  
+
+@media screen and (max-width: 299px) {
+  .mode {
+ margin-left: 0;
+ margin-top: 1rem;
+   
+  }
+ }
