--- a/src/components/Main/Button/Button.module.css
+++ b/src/components/Main/Button/Button.module.css
@@ -25,3 +25,30 @@
         background: var(--dark-blue);
         color: white;
        }
+
+       
+@media screen and  (max-width: 599px) and (min-width: 400px)  {
+   
+  .button {
+    padding: 0.2rem 1.2rem;
+  }
+  }
+
+  
+       
+@media screen and  (max-width: 399px)  and (min-width: 350px) {
+   
+    .button {
+      padding: 0.2rem 1rem;
+    }
+    }
+
+    
+       
+@media screen and  (max-width: 349px)  {
+   
+    .button {
+      padding: 0.2rem 1rem;
+      font-size: 0.9rem;
+    }
+    }
