--- a/src/components/Main/FilterSearchPanel/Filter.module.css
+++ b/src/components/Main/FilterSearchPanel/Filter.module.css
@@ -1,34 +1,43 @@
-
-
-
 .select {
-
-    margin-left: auto;
-    outline: none;
-    border: none;
-    box-shadow: 1px 1px 7px -3px black;
-    padding: 1.2rem 2rem;
-    padding-left: 1.5rem;
-    cursor: pointer;
-     font-size: 1rem;
-    font-family: regularFont;
-   
+  margin-left: auto;
+  outline: none;
+  border: none;
+  box-shadow: 1px 1px 7px -3px black;
+  padding: 1.2rem 2rem;
+  padding-left: 1.5rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-family: regularFont;
 }
 
 .dark {
-
-    background: var(--dark-blue);
-    color: var(--white);
+  background: var(--dark-blue);
+  color: var(--white);
 }
 
 /* Media Queries */
 
 @media screen and (max-width: 999px) {
-
- .select {
-
+  .select {
     font-size: 0.9rem;
     padding: 1.2rem 1.5rem;
- }
-      
+  }
+}
+
+@media screen and (max-width: 699px) {
+  .select {
+    margin-left: 0;
+    margin-top: 2rem;
+   
+  }
+}
+
+
+@media screen and (max-width: 399px) {
+    .select {
+      margin-left: 0;
+      margin-top: 1.5rem;
+      padding: 1rem;
+     
     }
+  }
