--- a/src/components/Main/FilterSearchPanel/FilterSearchPanel.module.css
+++ b/src/components/Main/FilterSearchPanel/FilterSearchPanel.module.css
@@ -1,41 +1,48 @@
-
 .search-box {
-
-    display: flex;
-    align-items: center;
-    margin: 3.5rem 4rem;
-    
-   
+  display: flex;
+  align-items: center;
+  margin: 3.5rem 4rem;
 }
-
 
 /* Media Queries */
 
 @media screen and (max-width: 1299px) and (min-width: 900px) {
-    
+  .search-box {
+    margin: 3.5rem 3rem;
+  }
+}
+
+@media screen and (max-width: 899px) and (min-width: 800px) {
+  .search-box {
+    margin: 3.5rem 2.5rem;
+  }
+}
+
+@media screen and (max-width: 799px) and (min-width: 700px) {
+  .search-box {
+    margin: 3.5rem 2.5rem;
+  }
+}
+
+@media screen and (max-width: 699px) {
+  .search-box {
+    flex-direction: column;
+   align-items: flex-start;
+   margin: 2.5rem;
+  }
+}
+
+
+@media screen and (max-width: 399px) and (min-width: 300px) {
     .search-box {
+   
+       margin: 2rem;
+      }
+}
 
-        margin: 3.5rem 3rem;
-    }
-      
-    }
-
-    
-
-    @media screen and (max-width: 899px) and (min-width: 800px) {
-    
-        .search-box {
-    
-            margin: 3.5rem 2.5rem;
-        }
-          
-        }
-
-        @media screen and (max-width: 799px) {
-    
-            .search-box {
-        
-                margin: 3.5rem 2rem;
-            }
-              
-            }
+@media screen and (max-width: 299px) {
+    .search-box {
+   
+        margin: 2rem 1.5rem;
+       }
+  }
